# bvault-js

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vitest.config.ts
.changeset/: light-things-watch.md  mighty-falcons-join.md  pink-eels-divide.md  seven-apes-press.md  short-birds-serve.md
bvault_js_rs/: Cargo.toml
bvault_js_rs/src/: lib.rs
bvault_js_rs/tests/: web.rs
example/: package-lock.json  package.json
example/src/: App.css  App.tsx
src/: index.ts
src/lib/: bvault-db.ts  crypto-wasm.ts  errors.ts  local-storage.ts  secure-storage.ts
test/: crypto-wasm.test.ts
