[package]
name = "bvault_js_rs"
version = "0.2.0"
authors = ["Aaron Will Djaba <papiliocurtis@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[profile.release]
opt-level = "s"
